# Feyce

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  feyce.c  main.c
include/: calc_movs.h  decode.h  evaluate.h  mutuals.h  square_rep.h
src/: calc_movs.c  decode.c  evaluate.c  feyce.c  square_rep.c
